--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @charset "utf-8";
 *, *:before, *:after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 html, body {
-	width:100%;
-	height:100%;
-	margin: 0;
-	padding: 0;
-	min-width: 200pt;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    min-width: 200pt;
 }
 body {
-	color: #4d575d;
-	background-color: #efeff4;
-	font-family: 'Roboto';
-	font-size: 14pt;
+    color: #4d575d;
+    background-color: #efeff4;
+    font-family: 'Roboto';
+    font-size: 14pt;
 }
 .plans input[type="radio"] {
     border: 0;
@@ -26,14 +26,14 @@ body {
     width: 1px;
 }
 .plans main {
-	display: flex; /*ie11 fallback*/
-	flex-direction: column;
-	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-rows: auto;
-	grid-gap: 16pt;
+    display: flex;
+    /*ie11 fallback*/
+    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-gap: 16pt;
 }
-
 .plans header {
     display: flex;
     flex-direction: row;
@@ -44,14 +44,14 @@ body {
     margin-bottom: 25pt;
 }
 .plans header h1 {
-	color: #000;
+    color: #000;
     font-size: 12pt;
     margin: auto;
     width: 100%;
     text-align: center;
 }
 .plans header button {
-	display: block;
+    display: block;
     position: absolute;
     overflow: hidden;
     top: 0;
@@ -65,7 +65,7 @@ body {
     padding: 0;
 }
 .plans header button:before {
-	content: '';
+    content: '';
     position: absolute;
     top: 0;
     bottom: 0;
@@ -81,11 +81,10 @@ body {
     border-left-style: solid;
     border-bottom-style: solid;
 }
-
 label {
-	display: flex;
+    display: flex;
     flex-direction: column;
-	background-color: #fff;
+    background-color: #fff;
     border: 1pt #c8c7cc;
     border-top-style: solid;
     border-bottom-style: solid;
@@ -99,100 +98,94 @@ label h1 {
     padding: 8pt 0;
     border-bottom: 1pt solid #c8c7cc;
 }
-label > div {
-	flex: 1 1 auto;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	font-size: 85%;
-	overflow: hidden;
+label>div {
+    flex: 1 1 auto;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    font-size: 85%;
+    overflow: hidden;
 }
 label.step2 {
-	border-bottom: none;
+    border-bottom: none;
 }
-.step0 > div,
-.step2 > div {
-	padding-top: 5pt;
+.step0>div, .step2>div {
+    padding-top: 5pt;
 }
-.step0 > div:after,
-.step1 > div:after {
-	content: '';
-	border: 1.5pt #c7c7cc;
-	border-bottom-style: solid;
-	border-right-style: solid;
-	transform: rotate(-45deg);
-	display: block;
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	margin: auto;
+.step0>div:after, .step1>div:after {
+    content: '';
+    border: 1.5pt #c7c7cc;
+    border-bottom-style: solid;
+    border-right-style: solid;
+    transform: rotate(-45deg);
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
     right: 10pt;
     width: 6pt;
     height: 6pt;
 }
 label span {
-	display: block;
-	padding: 5pt 10pt 5pt 12pt;
-	margin-right: auto;
+    display: block;
+    padding: 5pt 10pt 5pt 12pt;
+    margin-right: auto;
 }
 .speed {
     font-weight: bold;
 }
-
 .speed[forcolor^="Земля"] {
-	color: #fff;
-	background-color: #70603e;
+    color: #fff;
+    background-color: #70603e;
 }
 .speed[forcolor^="Вода"] {
-	color: #fff;
-	background-color: #0075d9;
+    color: #fff;
+    background-color: #0075d9;
 }
 .speed[forcolor^="Огонь"] {
-	color: #fff;
-	background-color: #e74807;
+    color: #fff;
+    background-color: #e74807;
 }
-.price {
-}
+.price {}
 .free_options {
-	font-size: 90%;
+    font-size: 90%;
     line-height: 1.1;
 }
-.step0 span:last-of-type,
-.step2 span:last-of-type {
-	height: 100%;
+.step0 span:last-of-type, .step2 span:last-of-type {
+    height: 100%;
     padding-left: 0;
     margin-right: 0;
     margin-left: 12pt;
     border-bottom: 1pt solid #c8c7cc;
 }
 .step0 a {
-	color: #007aff;
+    color: #007aff;
     display: block;
     text-decoration: none;
-	padding: 9pt 9pt 9pt 12pt;
+    padding: 9pt 9pt 9pt 12pt;
     font-size: 80%;
 }
 .step1 .price {
-	font-weight: bold;
+    font-weight: bold;
 }
-span.total_price,
-span.discount {
-	font-size: 90%;
-	padding-top: 0;
-	padding-bottom: 0;
+span.total_price, span.discount {
+    font-size: 90%;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 .step1 span:last-of-type {
-	padding-bottom: 10pt;
+    padding-bottom: 10pt;
 }
 .step2 .price {
-	font-weight: bold;
-	padding-top: 2pt;
-	padding-bottom: 5pt;
+    font-weight: bold;
+    padding-top: 2pt;
+    padding-bottom: 5pt;
 }
 span.dates {
-	font-size: 85%;
-	color: #aaa;
+    font-size: 85%;
+    color: #aaa;
 }
 .button_wrapper {
     background-color: #fff;
@@ -201,40 +194,39 @@ span.dates {
     border-top: none;
 }
 .button_wrapper button {
-	background: #82c12b;
-	height: 30pt;
-	width: 100%;
-	color: #fff;
-	border: none;
-	font-weight: bold;
+    background: #82c12b;
+    height: 30pt;
+    width: 100%;
+    color: #fff;
+    border: none;
+    font-weight: bold;
 }
-
 @media (min-width: 640px) {
-	.plans main {
-		margin: 5pt;
-		grid-template-columns: 1fr 1fr;
-	}
-	label {
-		border-style: solid;
-	}
-	label.step2 {
-		grid-column: span 2;
-		margin: 0 auto -5pt;
-		max-width: 280pt;
-		width: 100%;
-	}
-	.button_wrapper {
-		max-width: 280pt;
-		margin: auto;
-	}
+    .plans main {
+        margin: 5pt;
+        grid-template-columns: 1fr 1fr;
+    }
+    label {
+        border-style: solid;
+    }
+    label.step2 {
+        grid-column: span 2;
+        margin: 0 auto -5pt;
+        max-width: 280pt;
+        width: 100%;
+    }
+    .button_wrapper {
+        max-width: 280pt;
+        margin: auto;
+    }
 }
 @media (min-width: 1024px) {
-	.plans main {
-		margin: 10pt;
-		grid-template-columns: 1fr 1fr 1fr;
-	}
-	label.step2 {
-		grid-column: span 3;
-		margin: 0 auto -10pt;
-	}
+    .plans main {
+        margin: 10pt;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    label.step2 {
+        grid-column: span 3;
+        margin: 0 auto -10pt;
+    }
 }
